--- a/views/group.ejs
+++ b/views/group.ejs
@@ -50,11 +50,11 @@
       </script>
   </head>
   <body>
-    <span id="group0">The InfoVisioneers</span><a id="like0" href="#" onclick="javascript:like(0)">Like feedback</a><br/>
-    <span id="group1">LVM</span><a id="like1" href="#" onclick="javascript:like(1)">Like feedback</a><br/>
-    <span id="group2">Invisual</span><a id="like2" href="#" onclick="javascript:like(2)">Like feedback</a><br/>
-    <span id="group3">Data Chartists</span><a id="like3" href="#" onclick="javascript:like(3)">Like feedback</a><br/>
-    <span id="group4">Prof/TA</span><a id="like4" href="#" onclick="javascript:like(4)">Like feedback</a><br/>
+    <span id="group0">The InfoVisioneers</span><a id="like0" href="#like0" onclick="javascript:like(0)">Like feedback</a><br/>
+    <span id="group1">LVM</span><a id="like1" href="#like1" onclick="javascript:like(1)">Like feedback</a><br/>
+    <span id="group2">Invisual</span><a id="like2" href="#like2" onclick="javascript:like(2)">Like feedback</a><br/>
+    <span id="group3">Data Chartists</span><a id="like3" href="#like3" onclick="javascript:like(3)">Like feedback</a><br/>
+    <span id="group4">Prof/TA</span><a id="like4" href="#like4" onclick="javascript:like(4)">Like feedback</a><br/>
 
   </body>
 </html>
