--- a/views/ta.ejs
+++ b/views/ta.ejs
@@ -59,11 +59,12 @@
     <a id="group3" class="group" href="#" onclick="javascript:activate(3);">Data Chartists</a><a id="presenter0" href="#" onclick="javascript:presenter(3);">Set presenter</a><br/>
     <a id="group4" class="group" href="#" onclick="javascript:activate(4);">Prof/TA</a><a id="presenter0" href="#" onclick="javascript:presenter(4);">Set presenter</a><br/>
 
-
-  <a href="#" onclick="javascript:drawVersion(0);">Histogram</a><br/>
-  <a href="#" onclick="javascript:drawVersion(1);">Trees</a><br/>
-  <a href="#" onclick="javascript:drawVersion(2);">Feeback</a><br/>
-  <a href="#" onclick="javascript:drawVersion(3);">Solar</a><br/>
+    <br/>
+<br/>
+  <a href="#" class="vis" onclick="javascript:drawVersion(0);">Histogram</a><br/>
+  <a href="#" class="vis" onclick="javascript:drawVersion(1);">Trees</a><br/>
+  <a href="#" class="vis" onclick="javascript:drawVersion(2);">Feedback</a><br/>
+  <a href="#" class="vis" onclick="javascript:drawVersion(3);">Solar</a><br/>
 
   </body>
 </html>
