before starting wth new vis check-in
now we focus on 1

--- a/views/visualization.ejs
+++ b/views/visualization.ejs
@@ -2,7 +2,7 @@
 <html>
 <head>
     <title>LARAe.talktalk</title>
-    <link rel='stylesheet' href='/stylesheets/style.css' />
+    <link rel='stylesheet' href='public/stylesheets/style.css' />
     <script type="application/javascript" src="bower_components/jquery/dist/jquery.js"></script>
 
     <script type="application/javascript" src="bower_components/Processing.js/processing.js"></script>
@@ -513,7 +513,7 @@
         };
 
 
-         var _socket = io.connect("http://localhost:3000");
+        var _socket = io.connect("http://localhost:8080");
 
 
 
