--- a/views/group.ejs
+++ b/views/group.ejs
@@ -2,7 +2,7 @@
 <html>
   <head>
     <title>LARAe.talktalk</title>
-    <link rel='stylesheet' href='/stylesheets/style.css' />
+    <link rel='stylesheet' href='public/stylesheets/style.css' />
     <script type="application/javascript" src="bower_components/jquery/dist/jquery.js"></script>
     <script src="/socket.io/socket.io.js"></script>
 
@@ -12,7 +12,7 @@
 
 
 
-          var _socket = io.connect("http://localhost:3000");
+          var _socket = io.connect("http://localhost:8080");
 
 
 
