--- a/views/ta.ejs
+++ b/views/ta.ejs
@@ -2,9 +2,9 @@
 <html>
   <head>
     <title>LARAe.talktalk</title>
-    <link rel='stylesheet' href='/stylesheets/style.css' />
+    <link rel='stylesheet' href='public/stylesheets/style.css' />
     <script type="application/javascript" src="bower_components/jquery/dist/jquery.js"></script>
-    <script src="/socket.io/socket.io.js"></script>
+      <script src="/socket.io/socket.io.js"></script>
 
 
 
@@ -12,7 +12,7 @@
 
 
           var participants = [false,false,false,false,false];
-          var _socket = io.connect("http://localhost:3000");
+          var _socket = io.connect("http://localhost:8080");
           var presenting = -1;
           function activate(number) {
               if(number == presenting) return;
